Proj1 class Model improvements

--- a/Proj1/src/FancyNet1.ipynb
+++ b/Proj1/src/FancyNet1.ipynb
@@ -189,7 +189,6 @@
     "nb_epochs = 100\n",
     "lr = 1e-1\n",
     "\n",
-    "\n",
     "fancyNet1 = FancyNet1()\n",
     "train_model(fancyNet1, data, nb_epochs, lr)"
    ]
@@ -206,7 +205,6 @@
     "train_size = data[0].size(0)\n",
     "test_size = data[3].size(0)\n",
     "\n",
-    "\n",
     "print('train errors: \\n \\t num 1 errors : {:0.2f}% {:g}/{:g} \\n \\\n",
     "\\t num 2 errors : {:0.2f}% {:g}/{:g} \\n \\\n",
     "\\t final errors : {:0.2f}% {:g}/{:g}'.format((100 * nb_train_errors[0]) / train_size, nb_train_errors[0], train_size,\n",
@@ -217,31 +215,15 @@
     "\\t num 2 errors : {:0.2f}% {:g}/{:g} \\n \\\n",
     "\\t final errors : {:0.2f}% {:g}/{:g}'.format((100 * nb_test_errors[0]) / test_size, nb_test_errors[0], test_size,\n",
     "(100 * nb_test_errors[1]) / test_size, nb_test_errors[1], test_size,\n",
-    "(100 * nb_test_errors[2]) / test_size, nb_test_errors[2], test_size))\n",
-    "\n",
-    "\n"
+    "(100 * nb_test_errors[2]) / test_size, nb_test_errors[2], test_size))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dl]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-dl-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -253,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
