--- a/Proj1/src/StupidNet1.ipynb
+++ b/Proj1/src/StupidNet1.ipynb
@@ -59,7 +59,7 @@
     "        self.features = nn.Sequential(\n",
     "            nn.Conv2d(2, 32, kernel_size=3),         # 32 x 12 x 12\n",
     "            nn.ReLU(inplace=True),\n",
-    "            nn.MaxPool2d(kernel_size=3, stride=3),  # 32 x 4 x 4\n",
+    "            nn.MaxPool2d(kernel_size=3, stride=3),   # 32 x 4 x 4\n",
     "            nn.Conv2d(32, 64, kernel_size=3),        # 64 x 2 x 2\n",
     "            nn.ReLU(inplace=True),\n",
     "        )\n",
@@ -140,7 +140,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "nb_train_errors = compute_nb_errors(stupidNet1, pair_data[0], pair_data[1])\n",
     "nb_test_errors = compute_nb_errors(stupidNet1, pair_data[3], pair_data[4])\n",
     "print('train error Net {:0.2f}% {:d}/{:d}'.format((100 * nb_train_errors) / pair_data[0].size(0),\n",
@@ -159,9 +158,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dl]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-dl-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
