--- a/Proj1/src/FancyNet2.ipynb
+++ b/Proj1/src/FancyNet2.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "import timeit\n",
     "\n",
     "import torch\n",
     "from torch.autograd import Variable\n",
@@ -64,10 +64,10 @@
     "        \n",
     "        # convolutional network for feature extraction\n",
     "        self.features = nn.Sequential(\n",
-    "            nn.Conv2d(1, 32, kernel_size=3),\n",
-    "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
+    "            nn.Conv2d(1, 32, kernel_size=3),               # 32 x 10 x 10\n",
+    "            nn.MaxPool2d(kernel_size=2, stride=2),         # 32 x 5 x 5\n",
     "            nn.ReLU(inplace=True),\n",
-    "            nn.Conv2d(32, 64, kernel_size=3),\n",
+    "            nn.Conv2d(32, 64, kernel_size=3),              # 64 x 3 x 3\n",
     "            nn.MaxPool2d(kernel_size=2, stride=2),\n",
     "            nn.ReLU(inplace=True),\n",
     "            nn.Conv2d(64, 512, kernel_size=2),\n",
@@ -190,11 +190,13 @@
    "outputs": [],
    "source": [
     "mini_batch_size = 100\n",
-    "nb_epochs = 50\n",
+    "nb_epochs = 25\n",
     "lr = 1e-1\n",
     "\n",
     "fancyNet2 = FancyNet2()\n",
-    "train_model(fancyNet2, data, nb_epochs, lr)"
+    "ps = filter(lambda p: p.requires_grad, fancyNet2.parameters())\n",
+    "params = sum([torch.tensor(p.size()).prod() for p in ps])\n",
+    "params"
    ]
   },
   {
@@ -209,7 +211,6 @@
     "train_size = data[0].size(0)\n",
     "test_size = data[3].size(0)\n",
     "\n",
-    "\n",
     "print('train errors: \\n \\t num 1 errors : {:0.2f}% {:g}/{:g} \\n \\\n",
     "\\t num 2 errors : {:0.2f}% {:g}/{:g} \\n \\\n",
     "\\t final errors : {:0.2f}% {:g}/{:g}'.format((100 * nb_train_errors[0]) / train_size, nb_train_errors[0], train_size,\n",
@@ -220,16 +221,15 @@
     "\\t num 2 errors : {:0.2f}% {:g}/{:g} \\n \\\n",
     "\\t final errors : {:0.2f}% {:g}/{:g}'.format((100 * nb_test_errors[0]) / test_size, nb_test_errors[0], test_size,\n",
     "(100 * nb_test_errors[1]) / test_size, nb_test_errors[1], test_size,\n",
-    "(100 * nb_test_errors[2]) / test_size, nb_test_errors[2], test_size))\n",
-    "\n"
+    "(100 * nb_test_errors[2]) / test_size, nb_test_errors[2], test_size))\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dl]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-dl-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -241,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
