Remove generated latex files and add .gitignore for tex

--- a/Proj2/report/report.tex
+++ b/Proj2/report/report.tex
@@ -27,7 +27,7 @@
 \maketitle
 
 \begin{abstract}
-
+This report is a description of our approach to implement a simple deep-learning framework from scratch. The framework is then used to build a very basic network and train, as well as evaluate it on a randomly generated dataset.
 \end{abstract}
 
 \section{Introduction}
@@ -35,7 +35,15 @@
 \section{Framework implementation}
 In order to implement the mini deep-learning framework we chose a structure based on the suggestion provided in the project description. All modules are implemented as classes which inherit from a parent class \texttt{Module}. They need to override the \texttt{forward()} and \texttt{backward()} methods.
 
+% TODO: describe interesting implementation details
+
 To ensure the correctness of our implementations we wrote a series of unit tests which compare the functionalities of our code to the corresponding PyTorch functionalities.
+
+\section{Data Description}
+
+\section{Network Description}
+
+\section{Performance Evaluation}
 
 \section{Conclusion}
 
