Thanks to some guy in russia

--- a/Proj1/report/report.tex
+++ b/Proj1/report/report.tex
@@ -21,7 +21,7 @@
 \title{Deep Learning - Miniproject 1}
 
 \author{
-  Olesya Altunina (285467), Mauro Pfister (235440), Joey Zenhaeusern (226652)
+  Olesia Altunina (285467), Mauro Pfister (235440), Joey Zenhaeusern (226652)
 }
 
 \maketitle
