--- a/Proj2/report/literature.bib
+++ b/Proj2/report/literature.bib
@@ -13,3 +13,20 @@
   pages={1139--1147},
   year={2013}
 }
+
+
+@InProceedings{pmlr-v9-glorot10a,
+  title = 	 {Understanding the difficulty of training deep feedforward neural networks},
+  author = 	 {Xavier Glorot and Yoshua Bengio},
+  booktitle = 	 {Proceedings of the Thirteenth International Conference on Artificial Intelligence and Statistics},
+  pages = 	 {249--256},
+  year = 	 {2010},
+  editor = 	 {Yee Whye Teh and Mike Titterington},
+  volume = 	 {9},
+  series = 	 {Proceedings of Machine Learning Research},
+  address = 	 {Chia Laguna Resort, Sardinia, Italy},
+  month = 	 {13--15 May},
+  publisher = 	 {PMLR},
+  pdf = 	 {http://proceedings.mlr.press/v9/glorot10a/glorot10a.pdf},
+  url = 	 {http://proceedings.mlr.press/v9/glorot10a.html}
+}
